--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
         "search_provider": {
             "name": "Qwant",
             "keyword": "q",
-            "search_url": "https://www.qwant.com/?q={searchTerms}",
+            "search_url": "https://www.qwant.com/?b=0&q={searchTerms}",
             "favicon_url": "https://www.qwant.com/favicon.ico",
             "suggest_url": "https://api.qwant.com/api/suggest/?q={searchTerms}&client=opensearch&lang=__MSG_locale__",
             "is_default": true
